# Dictator

./: Cargo.toml  README.md  build.rs  config.yaml
grpc_server/: Cargo.toml  build.rs
grpc_server/proto/: transcribe.proto
grpc_server/src/: server.rs  settings.rs
grpc_server/src/error/: error.rs
grpc_server/src/pb/: mod.rs  transcribe.rs
grpc_server/src/service/: local_recognizer.rs  mod.rs  transcribe_service.rs  vad_recognizer.rs
grpc_server/src/utils/: grpc.rs  mod.rs
proto/: simple.proto  transcribe.proto
silero_vad/: Cargo.toml
silero_vad/src/: lib.rs
silero_vad/src/error/: error.rs
silero_vad/src/service/: mod.rs  recognizer.rs  silero.rs  vad_iter.rs
silero_vad/src/utils/: utils.rs
src/: main.rs  server.rs  settings.rs
src/error/: error.rs
src/pb/: _.rs  mod.rs  transcribe.rs
src/service/: local_recognizer.rs  mod.rs  service.rs  transcribe_service.rs
src/utils/: mod.rs  transcode.rs  wav.rs  word.rs
