[package]
name = "grpc_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
vosk.workspace = true
serde.workspace = true
tokio.workspace = true
hound.workspace = true
tonic.workspace = true
prost.workspace = true
config.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
silero_vad.workspace = true

[build-dependencies]
tonic-build.workspace = true

[[bin]]
name = "grpc_server"
path = "src/server.rs"
